membuat form di halaman contack

--- a/Git/contack.html
+++ b/Git/contack.html
@@ -8,7 +8,7 @@
 <body>
     <header>Mari Belajar GIT</header>
     <h1>PT DEDY DURA</h1>
-
+    <form action=""></form>
     <div>Ini adalah halaman contack berisi form dan map</div>
     <footer>Ini adalah footer</footer>
 </body>
